--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("assets/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* Cacher la barre de défilement tout en permettant le défilement du contenu */
+/* Pour les navigateurs basés sur WebKit (Chrome, Safari) */
+/* Note : Cette partie peut être omise si vous n'avez pas besoin de prendre en charge ces navigateurs */
+/* Vous pouvez également personnaliser davantage l'apparence de la barre de défilement selon vos besoins */
+
+/* Cacher la barre de défilement verticale */
+::-webkit-scrollbar {
+  width: 0.5em; /* Largeur de la barre de défilement (ajustez selon vos besoins) */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: transparent; /* Couleur du bouton de la barre de défilement (caché) */
+}
+
+/* Cacher la barre de défilement horizontale (si nécessaire) */
+::-webkit-scrollbar-track {
+  background-color: transparent; /* Couleur de la piste de la barre de défilement (cachée) */
 }
